--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.youtube.com/*"],
+      "matches": ["https://www.youtube.com/*", "https://www.twitch.tv/*"],
       "js": ["content.js"]
     }
   ]
