--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,9 @@
   "version": "1.0",
   "description": "Log the current page URL to console",
   "permissions": ["activeTab"],
+  "icons": {
+    "48": "icon.png"
+  },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
